tests/ui/unstable-features/stmt_expr_attributes-feature-gate.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/stmt_expr_attributes-feature-gate.rs:22:5
   |
22 |     #[project] //~ ERROR E0658
   |     ^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/15701
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/stmt_expr_attributes-feature-gate.rs:38:14
   |
38 |     let () = #[project] //~ ERROR E0658
   |              ^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/15701
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: custom attributes cannot be applied to expressions
  --> $DIR/stmt_expr_attributes-feature-gate.rs:22:5
   |
22 |     #[project] //~ ERROR E0658
   |     ^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54727
   = help: add `#![feature(proc_macro_hygiene)]` to the crate attributes to enable

error[E0658]: custom attributes cannot be applied to expressions
  --> $DIR/stmt_expr_attributes-feature-gate.rs:38:14
   |
38 |     let () = #[project] //~ ERROR E0658
   |              ^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54727
   = help: add `#![feature(proc_macro_hygiene)]` to the crate attributes to enable
